--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="tyylit.css" rel="stylesheet">
 </head>
-<body body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <main id="alku" class="container-fluid">
 
         <nav class="navbar navbar-expand-sm navbar-light navbar-custom fixed-top">
@@ -107,7 +107,7 @@
             <p>Tämä on keskimmäinen palsta, jossa on tekstiä. Voit lisätä haluamaasi sisältöä tähän.</p>
         </div>
         <div class="col-md-4">
-            <img src="lounassalaatti.jpg" alt="Salaatti" id="pyoristettykuva">
+            <img src="lounassalaatti.jpg" alt="Salaatti" id="pyoristettykuva2">
         </div>
     </div>
 </div>
@@ -235,7 +235,7 @@
     <br>
     <br>
     <label for="palaute" class="muoto">Palaute</label>
-    <textarea id="palaute" rows="S" cols="50" placeholder="Kerro mielipiteesi..."></textarea>
+    <textarea id="palaute" rows="5" cols="50" placeholder="Kerro mielipiteesi..."></textarea>
     <br>
     <br>
     <label>Mikä on parasta Kahvilassamme?</label>
