--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="avokaadoleivät.jpg" alt="Avokaadoleivät" class="d-block" style="width:100%">
+        <img src="avokaadoleivat.jpg" alt="Avokaadoleivät" class="d-block" style="width:100%">
         <div class="carousel-caption">
           <h3>Pientä purtavaa</h3>
           <p>jokaiseen makuun!</p>
