--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="avokaadoleivät.jpg" alt="Kaksi maukasta avokaadoleipää lautasella" class="d-block" style="width:100%">
+        <img src="avokaadoleivat.jpg" alt="Kaksi maukasta avokaadoleipää lautasella" class="d-block" style="width:100%">
         <div class="carousel-caption">
           <h3>Pientä purtavaa</h3>
           <p>tietysti jokaiseen makuun!</p>
@@ -167,7 +167,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body d-flex flex-lg-row flex-column align-items-center">
-        <img src="avokaadoleivät.jpg" alt="Image 1" class="accordion-img">
+        <img src="avokaadoleivat.jpg" alt="Image 1" class="accordion-img">
         <p class="accordion-text">Kaken Cafeessa tarjolla on herkullisia pieniä purtavia, jotka sopivat täydellisesti kahvin tai teen seuraksi. Valikoimamme sisältää tuoreita leivonnaisia, suolaisia herkkuja ja pieniä välipaloja, jotka tekevät päivästäsi nautinnollisen. Olitpa sitten nauttimassa rentouttavasta hetkestä yksin tai ystävien kanssa, löydät meiltä aina jotain pientä ja maistuvaa. Tervetuloa herkuttelemaan!</p>
         <img src="avokaadosalde.jpg" alt="Image 1" class="accordion-img">
       </div>
